# scaffold-piccolo

./: .gitignore  README.md  pyproject.toml  stuff.py
.github/workflows/: ci.yml
piccolo_scaffold/: __init__.py  __main__.py  scaffold.py
